[package]
name = "cola"
version = "0.4.4"
edition = "2021"
authors = ["Riccardo Mazzarini <me@noib3.dev>"]
description = "A text CRDT for real-time collaborative editing"
documentation = "https://docs.rs/cola"
repository = "https://github.com/nomad/cola"
readme = "README.md"
license = "MIT"
keywords = ["crdt", "collaboration", "text", "editor", "tree"]
categories = ["data-structures", "text-editors", "text-processing"]
exclude = ["/.github/*", "/examples/**", "/fuzz/**", "/tests/**"]

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
encode = ["dep:sha2"]
serde = ["encode", "dep:serde"]

[dependencies]
serde = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
bincode = "1.3"
criterion = "0.5"
rand = "0.8"
rand_chacha = "0.3"
serde_json = "1"
traces = { path = "./traces" }
zstd = "0.13"

[[bench]]
name = "traces"
harness = false
